--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "formik": "^2.4.2",
     "next": "13.4.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-redux": "^8.1.0",
+    "redux": "^4.2.1",
+    "yup": "^1.2.0"
   }
 }
